<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="Button">I\`m a button</string>
    <string name="TextWidget">Here are my widgets:</string>
    <string name="EditType">Type your answer in here</string>
    <string name="TextCheck">Check this out!</string>
    <string name="Swift">Switch on/off</string>
    <string name="btn">Button</string>
    <string name="emailAddress">Enter your email address: </string>
    <string name="typePass">Type your password: </string>
    <string name="emailHint">Type your email here</string>
    <string name="btnAbove">Click the button above to take a picture</string>
    <string name="pic">Your picture: </string>
    <string name="YourEmail">Your email: </string>
    <string name="EnterYourName">Enter your name: </string>
    <string name="YourName">Your name: </string>
    <string name="YourProfile">Your profile: </string>
    <string name="icon1">Icon 1</string>
    <string name="icon2">Icon 2</string>
    <string name="icon3">Icon 3</string>
    <string name="about">ABOUT</string>
    <string name="newMessage">What is the new message?</string>
    <string name="typeHere">You can type here</string>
    <string name="currTemp">Current temperature is:</string>
    <string name="minTemp">Minimum temperature is:</string>
    <string name="maxTemp">Maximum temperature is:</string>
    <string name="uvRating">UV rating is:</string>
</resources>
