<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextWidget"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:text="@string/btn" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_toEndOf="@id/button2"
        android:layout_below="@id/textView2"
        app:srcCompat="@drawable/flag" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:text="@string/TextCheck" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_alignParentEnd="true"
        android:text="@string/Swift" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_below="@id/checkBox2"
        android:hint="@string/EditType"/>
</RelativeLayout>
